Fixed the title bar text in all views somethings being too long, which caused the buttons to jump down, causing the title bar to look strange.

--- a/src/foundation/_view-title-bar.scss
+++ b/src/foundation/_view-title-bar.scss
@@ -32,6 +32,10 @@ div.title-bar {
         
         @media screen and ( max-width: $maximum-width ) {
             margin-top: 2px;
+            max-width: 160px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
     }
 
